--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "node test.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^6.1.0",
+    "minimist": "^1.2.0"
+  }
 }
